# OpenGL-Journey

./: .gitignore  CMakeLists.txt  DEVELOPMENT_JOURNAL.md
01-Triangle/: CMakeLists.txt
02-Triforce/: CMakeLists.txt
02-Triforce/include/: VAO.h  shaderClass.h
02-Triforce/src/: VAO.cpp  main.cpp
03-InterpolatedTriangle/: CMakeLists.txt
03-InterpolatedTriangle/include/: EBO.h  VAO.h
03-InterpolatedTriangle/shaders/: default.vert
03-InterpolatedTriangle/src/: VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
04-3DCube/: CMakeLists.txt
04-3DCube/include/: VAO.h
04-3DCube/src/: main.cpp
05-3DCubeTextured/: CMakeLists.txt
05-3DCubeTextured/shaders/: default.vert
05-3DCubeTextured/src/: main.cpp
06-Camera/: CMakeLists.txt
06-Camera/include/: textureClass.h
06-Camera/src/: Camera.cpp  main.cpp  textureClass.cpp
07-Lighting/: CMakeLists.txt
07-Lighting/include/: Camera.h
07-Lighting/shaders/: default.frag  default.vert
07-Lighting/src/: Camera.cpp  main.cpp
08-SpecularMaps/: CMakeLists.txt
08-SpecularMaps/include/: Camera.h  VBO.h
08-SpecularMaps/shaders/: default.vert
08-SpecularMaps/src/: EBO.cpp  main.cpp
09-TypesOfLight/: CMakeLists.txt
09-TypesOfLight/include/: textureClass.h
09-TypesOfLight/shaders/: default.frag  light.vert
09-TypesOfLight/src/: VAO.cpp  main.cpp  textureClass.cpp
10-MeshClass/: CMakeLists.txt
10-MeshClass/include/: Camera.h  EBO.h  Mesh.h  Shader.h  Texture.h  VBO.h
10-MeshClass/src/: EBO.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
OpenGL_Journals/: OpenGL_Journals.vcxproj  OpenGL_Journals.vcxproj.filters  default.frag  default.vert
OpenGL_Journals/x64/Debug/: 01_Triforce_Triangles.exe.recipe  02_Rotating_Triangles.exe.recipe  OpenGL_Journals.exe.recipe
OpenGL_Journals/x64/Debug/01_Trifo.b2bee8d0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OpenGL_Journals/x64/Debug/OpenGL_Journals.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGL_Journals.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Triangle/: CMakeLists.txt
Triforce/: CMakeLists.txt
Triforce/src/: main.cpp
src/: main.cpp
